--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vite": "^6.0.8"
     },
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-react": "^0.8.1",
         "flowbite-react": "^0.10.2",
         "js-cookie": "^3.0.5"
     }
