--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,16 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:b8gxIBhBtWOazdZHU4EgGkaBcovfawFSDx3VSbEbAQM=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
-APP_URL=http://localhost
-
+APP_TIMEZONE=Asia/Jakarta
+APP_URL=http://localhost:8000/
+FRONTEND_URL=http://localhost:5173/
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
-
+APP_MAINTENANCE_STORE=database
 BCRYPT_ROUNDS=12
 
 LOG_CHANNEL=stack
@@ -19,18 +18,18 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=lms2nih
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
-SESSION_DOMAIN=null
+SESSION_DOMAIN=localhost
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
@@ -62,3 +61,5 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+VITE_API_URL=http://localhost:8000/
+SANCTUM_STATEFUL_DOMAINS=localhost
