build: update dependencies

--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,15 @@
     "require": {
         "php": "^8.2",
         "darkaonline/l5-swagger": "^8.6",
+        "imagekit/imagekit": "^4.0",
         "inertiajs/inertia-laravel": "^1.0",
+        "intervention/image": "^3.11",
+        "intervention/image-laravel": "^1.5",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "league/flysystem": "^3.29",
+        "league/flysystem-aws-s3-v3": "3.0",
         "spatie/laravel-permission": "^6.10",
         "tightenco/ziggy": "^2.0",
         "tymon/jwt-auth": "^2.1"
