--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-react": "^0.8.1",
         "flowbite-react": "^0.10.2",
-        "js-cookie": "^3.0.5"
+        "js-cookie": "^3.0.5",
+        "react-hot-toast": "^2.5.2"
     }
 }
