--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-react": "^0.8.1",
+        "@types/react": "^19.1.9",
+        "caniuse-lite": "^1.0.30001734",
         "flowbite-react": "^0.10.2",
         "js-cookie": "^3.0.5",
         "react-hot-toast": "^2.5.2"
