--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "laravel/wayfinder": "^0.1.12",
         "league/flysystem": "^3.29",
         "league/flysystem-aws-s3-v3": "3.0",
         "spatie/laravel-permission": "^6.10",
