--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-react": "^0.8.1",
+        "@tanstack/react-query": "^5.90.5",
         "@types/react": "^19.1.9",
         "caniuse-lite": "^1.0.30001734",
         "js-cookie": "^3.0.5",
