feat: Refactor API controllers and routes for Praktikum management
- Removed unused controllers: HistoryJagaController, LaporanPjController, PelanggaranController, LaporanPraktikanController, DeadlineController.
- Added PraktikumController to manage Praktikum sessions.
- Updated routes to include new Praktikum routes for CRUD operations.
- Introduced broadcasting for Praktikum status updates with new event and broadcasting configuration.
- Added new migration files to update the Praktikum table with new fields: status, current_phase, report_notes, report_submitted_at, and pj_id.
- Implemented React Query hook for fetching Praktikum history.

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "intervention/image": "^3.11",
         "intervention/image-laravel": "^1.5",
         "laravel/framework": "^11.9",
+        "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "laravel/wayfinder": "^0.1.12",
