--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "@types/react": "^19.1.9",
         "caniuse-lite": "^1.0.30001734",
         "js-cookie": "^3.0.5",
+        "laravel-echo": "^2.2.4",
+        "pusher-js": "^8.4.0",
         "react-hot-toast": "^2.5.2"
     }
 }
