--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
         "js-cookie": "^3.0.5",
         "laravel-echo": "^2.2.4",
         "pusher-js": "^8.4.0",
-        "react-hot-toast": "^2.5.2"
+        "react-hot-toast": "^2.5.2",
+        "react-markdown": "^10.1.0",
+        "react-syntax-highlighter": "^16.1.0",
+        "remark-breaks": "^4.0.0",
+        "remark-gfm": "^4.0.1"
     }
 }
