--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "caniuse-lite": "^1.0.30001734",
         "js-cookie": "^3.0.5",
         "laravel-echo": "^2.2.4",
+        "lodash": "^4.17.21",
         "pusher-js": "^8.4.0",
         "react-hot-toast": "^2.5.2",
         "react-markdown": "^10.1.0",
