--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vite": "^6.0.8"
     },
     "dependencies": {
+        "@imagekit/react": "^5.0.1",
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-react": "^0.8.1",
         "@tanstack/react-query": "^5.90.5",
