feat: Add file upload functionality to Profile Pictures, ModalEditSoalEssay, and Jurnal components
- Implemented a toggle for enabling file uploads in ModalEditSoalEssay.
- Created ModalEditProfilePraktikan for editing praktikan profiles with avatar upload and delete options.
- Enhanced Jurnal component to support file uploads with previews and delete functionality.
- Updated CardPolling and PollingContent components to utilize ImageKit for image rendering.
- Introduced useImageKitUpload hook for handling ImageKit uploads with progress tracking.
- Added server-side routes for ImageKit authentication and file uploads.

--- a/.env.example
+++ b/.env.example
@@ -60,6 +60,12 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+IMAGEKIT_PUBLIC_KEY=
+IMAGEKIT_PRIVATE_KEY=
+IMAGEKIT_ENDPOINT_URL=
+
 VITE_APP_NAME="${APP_NAME}"
 VITE_API_URL=http://localhost:8000/
+VITE_IMAGEKIT_PUBLIC_KEY="${IMAGEKIT_PUBLIC_KEY}"
+VITE_IMAGEKIT_ENDPOINT_URL="${IMAGEKIT_ENDPOINT_URL}"
 SANCTUM_STATEFUL_DOMAINS=localhost
