--- a/package.json
+++ b/package.json
@@ -7,22 +7,22 @@
     },
     "devDependencies": {
         "@headlessui/react": "^2.0.0",
-        "@inertiajs/react": "^1.0.0",
+        "@inertiajs/react": "^2.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.7.9",
+        "babel-plugin-react-compiler": "^1.0.0",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
         "tailwindcss": "^3.2.1",
         "vite": "^6.0.8"
     },
     "dependencies": {
         "@imagekit/react": "^5.0.1",
         "@inertiajs/inertia": "^0.11.1",
-        "@inertiajs/inertia-react": "^0.8.1",
         "@tanstack/react-query": "^5.90.5",
         "@types/react": "^19.1.9",
         "caniuse-lite": "^1.0.30001734",
