--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,16 @@ yarn-error.log
 /.idea
 /.vscode
 database.sql
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
+
+**/caddy
+frankenphp
+frankenphp-worker.php
+dbdata
