--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,13 @@
         "intervention/image-laravel": "^1.5",
         "laravel/framework": "^11.9",
         "laravel/horizon": "^5.38",
+        "laravel/octane": "^2.13",
         "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "league/flysystem": "^3.29",
         "league/flysystem-aws-s3-v3": "3.0",
+        "predis/predis": "^3.2",
         "spatie/laravel-permission": "^6.10",
         "tightenco/ziggy": "^2.0",
         "tymon/jwt-auth": "^2.1"
