--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -4,7 +4,7 @@ user=root
 
 [program:serve]
 directory=/app  
-command=/usr/local/bin/frankenphp php-cli artisan octane:start --host=0.0.0.0 --port=8000
+command=/usr/local/bin/frankenphp php-cli artisan octane:start --host=0.0.0.0 --port=8000 --watch
 # command=/usr/local/bin/frankenphp php-cli artisan serve --host=0.0.0.0 --port=8000
 # stdout_logfile=/var/log/supervisor/frankenphp.log
 # stderr_logfile=/var/log/supervisor/frankenphp-error.log
