--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "js-cookie": "^3.0.5",
     "laravel-echo": "^2.2.4",
     "lodash": "^4.17.21",
+    "mermaid": "^11.12.3",
     "pusher-js": "^8.4.0",
     "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.1.0",
